[package]
name = 'pallet-stake'
version = '3.1.1'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.1.1', default-features = false, features = ['derive'] }
sp-std = { package = 'sp-std', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.3"}
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.3"}
frame-system = { package = 'frame-system', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.3"}
sp-arithmetic = { package = 'sp-arithmetic', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.3"}
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.3"}

[dev-dependencies]
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.3"}
sp-core = { package = 'sp-core', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.3"}
pallet-timestamp = { package = 'pallet-timestamp', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.3"}
balances = { package = 'pallet-balances', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.3"}

[features]
default = ['std']
std = [
	'codec/std',
	'sp-std/std',
	'frame-support/std',
	'frame-system/std',
	'sp-arithmetic/std',
	'sp-runtime/std',
]
