[package]
name = 'pallet-staking-handler'
version = '3.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-arithmetic = { workspace = true }
pallet-balances = { workspace = true }
common = { package = 'pallet-common', default-features = false, path = '../common'}

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive'] }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }
pallet-timestamp = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
default = ['std']
std = [
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'sp-arithmetic/std',
    'pallet-balances/std',
    'common/std',
]
