[package]
name = 'pallet-staking-handler'
version = '3.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
sp-std = { package = 'sp-std', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0'}
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0'}
frame-system = { package = 'frame-system', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0'}
sp-arithmetic = { package = 'sp-arithmetic', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0'}
pallet-balances = { package = 'pallet-balances', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0'}
common = { package = 'pallet-common', default-features = false, path = '../common'}

[dev-dependencies]
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0'}
sp-core = { package = 'sp-core', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0'}
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive'] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0'}
pallet-timestamp = { package = 'pallet-timestamp', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0'}
serde = { version = "1.0.101", features = ["derive"] }

[features]
default = ['std']
std = [
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'sp-arithmetic/std',
    'pallet-balances/std',
    'common/std',
]
