[package]
name = 'pallet-storage'
version = '5.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = [
    'derive',
] }
scale-info = { workspace = true, features = ["derive"] }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
pallet-timestamp = { workspace = true }
common = { package = 'pallet-common', default-features = false, path = '../common' }
balances = { workspace = true }

# Benchmarking
frame-benchmarking = { workspace = true, optional = true }
working-group = { package = 'pallet-working-group', default-features = false, path = '../working-group', optional = true }
sp-core = { workspace = true, optional = true }
membership = { package = 'pallet-membership', default-features = false, optional = true, path = '../membership' }

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }
balances = { workspace = true }
vesting = { workspace = true }
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler' }
membership = { package = 'pallet-membership', default-features = false, path = '../membership' }
randomness-collective-flip = { workspace = true }
derive-fixture = { workspace = true }
derive-new = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "working-group/runtime-benchmarks",
    "membership/runtime-benchmarks",
    'sp-core',
]
std = [
    'serde',
    'codec/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'sp-arithmetic/std',
    'balances/std',
    'pallet-timestamp/std',
    'sp-runtime/std',
    'common/std',
    'scale-info/std',
    'working-group/std',
    'frame-benchmarking?/std',
]
playground-runtime = []
testing-runtime = []
try-runtime = ["frame-support/try-runtime"]
