[package]
name = 'pallet-storage'
version = '5.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = [
    'derive',
] }
scale-info = { version = "2.1.1", default-features = false, features = [
    "derive",
] }
sp-std = { package = 'sp-std', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
frame-system = { package = 'frame-system', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
sp-arithmetic = { package = 'sp-arithmetic', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
pallet-timestamp = { package = 'pallet-timestamp', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
common = { package = 'pallet-common', default-features = false, path = '../common' }
balances = { package = 'pallet-balances', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }

# Benchmarking
frame-benchmarking = { package = 'frame-benchmarking', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0', optional = true }
working-group = { package = 'pallet-working-group', default-features = false, path = '../working-group', optional = true }
sp-core = { package = 'sp-core', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0', optional = true }
membership = { package = 'pallet-membership', default-features = false, optional = true, path = '../membership' }

[dev-dependencies]
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
sp-core = { package = 'sp-core', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
balances = { package = 'pallet-balances', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
vesting = { package = 'pallet-vesting', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler' }
membership = { package = 'pallet-membership', default-features = false, path = '../membership' }
randomness-collective-flip = { package = 'pallet-insecure-randomness-collective-flip', default-features = false, git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.7.0' }
derive-fixture = { package = 'derive-fixture', default-features = false, path = '../support/derive-fixture' }
derive-new = "0.5"

[features]
default = ['std']
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "working-group/runtime-benchmarks",
    "membership/runtime-benchmarks",
    'sp-core',
]
std = [
    'serde',
    'codec/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'sp-arithmetic/std',
    'balances/std',
    'pallet-timestamp/std',
    'sp-runtime/std',
    'common/std',
    'scale-info/std',
    'working-group/std',
    'frame-benchmarking?/std',
]
playground-runtime = []
testing-runtime = []
try-runtime = ["frame-support/try-runtime"]
